--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -19,4 +19,6 @@
 @import 'blocks/benefit';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+
 @import 'base/media';
