--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -4,23 +4,29 @@
         width: 750px;
         margin: 0 auto;
     }
-    .slick-prev, .slick-next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    img {
-        width: 31px;
-        height: 50px;
+    .prev, .next {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+        img {
+            width: 31px;
+            height: 50px;
+        }
     }
-    }
-    .slick-prev {
+    .prev {
         left: -66px;
     }
-    .slick-next {
+    .next {
         right: -66px;
+    }
+    .tns-item {
+        img {
+            display: block;
+            margin: 0 auto;
+        }
     }
 }
 
