--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -16,17 +16,35 @@
     .header {
         justify-content: space-around;
     }
+    .carousel {
+        .tns-item {
+            img {
+                width: 600px;
+            }
+        }
+        .prev {
+            left: 10%;
+        }
+        .next {
+            right: 10%;
+        }
+    }
 }
 
 @media (max-width: 991px){
-    // .carousel {
-    //     &__inner {
-    //         width: 600px;
-    //     }
-    //     &__img {
-    //         width: 500px;
-    //     }
-    // }
+    .carousel {
+        .tns-item {
+            img {
+                width: 450px;
+            }
+        }
+        .prev {
+            left: 5%;
+        }
+        .next {
+            right: 5%;
+        }
+    }
 }
 
 @media (max-width: 767px){
@@ -39,7 +57,34 @@
             max-width: 70%;
         }
     }
-
+    .carousel {
+        .tns-item {
+            img {
+                width: 80%;
+            }
+        }
+        .prev, .next {
+            display: none;
+        }
+        .tns-nav {
+            left: 50%;
+            transform: translateX(-50%);
+            position: absolute;
+            bottom: -15px;
+            button {
+                z-index: 100;
+                width: 10px;
+                height: 10px;
+                margin-right: 10px;
+                border-radius: 100%;
+                border: 1px solid #ccc;
+                &.tns-nav-active {
+                    background-color: $main-color;
+                    border: none
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 575px) {
