catalog section and double-sided cards

--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -27,4 +27,8 @@
         padding: 17px 30px 16px 29px;
         font-size: 16px;
     }
+    &_buy {
+        width: 135px;
+        height: 44px;
+    }
 }
