--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -3,13 +3,16 @@
     font-size: 30px;
     text-align: center;
     color: #0D0D0D;
+    text-transform: uppercase;
     &_left {
         text-align: left;
         font-weight: 700;
         font-size: 36px;
-        text-transform: uppercase;
         color: #fff;
         line-height: 54px;
         margin-top: 36px;
+    }
+    &_light {
+        font-weight: 400;
     }
 }
