--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -21,5 +21,7 @@
 @import 'blocks/consultation';
 @import 'blocks/forms';
 @import 'blocks/carousel';
+@import 'blocks/card';
+@import 'blocks/catalog';
 
 @import 'base/media';
