--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -7,6 +7,10 @@
     text-transform: uppercase;
     font-weight: 500;
     cursor: pointer;
+    transition: 0.5s all;
+    &:hover {
+        background-color: $hover-color;
+    }
     &_big {
         margin-top: 65px;
         height: 54px;
