--- a/src/sass/blocks/_card.scss
+++ b/src/sass/blocks/_card.scss
@@ -88,7 +88,7 @@
                 }
             }
     }
-    &-active {
+    &_active {
         .card__front-side {
             transform: rotateY(180deg)
         }
